Second commit 30th August

--- a/index.html
+++ b/index.html
@@ -6,6 +6,79 @@
         <meta http-equiv="X-UA-Comaptilbe" content="ie-edge">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <title>Acrylic Painting Gallery</title>
+        <title>Hello There</title>
     </head>
+    <body>
+        <header class="main-header">
+            <h1><span>Hello! </span>I'm Saumya Rai</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, eligendi.</p>
+        </header>
+
+        <main class="container">
+            <section class="card">
+                <img src="img/IMG_0336.JPG" alt="">
+                <div>
+                    <h3>Acrylic Painting One</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Minus, modi. Adipisci quas, non recusandae tenetur eveniet quo illo totam nobis sunt 
+                        labore provident nesciunt asperiores, architecto itaque odit delectus sint?
+                    </p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+
+            <section class="card">
+                <img src="img/IMG_0336.JPG" alt="">
+                <div>
+                    <h3>Acrylic Painting One</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Minus, modi. Adipisci quas, non recusandae tenetur eveniet quo illo totam nobis sunt 
+                        labore provident nesciunt asperiores, architecto itaque odit delectus sint?
+                    </p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+
+            <section class="card">
+                <img src="img/IMG_0336.JPG" alt="">
+                <div>
+                    <h3>Acrylic Painting One</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Minus, modi. Adipisci quas, non recusandae tenetur eveniet quo illo totam nobis sunt 
+                        labore provident nesciunt asperiores, architecto itaque odit delectus sint?
+                    </p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+
+            <section class="card">
+                <img src="img/IMG_0336.JPG" alt="">
+                <div>
+                    <h3>Acrylic Painting One</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Minus, modi. Adipisci quas, non recusandae tenetur eveniet quo illo totam nobis sunt 
+                        labore provident nesciunt asperiores, architecto itaque odit delectus sint?
+                    </p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+
+            <section class="card">
+                <img src="img/IMG_0336.JPG" alt="">
+                <div>
+                    <h3>Acrylic Painting One</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Minus, modi. Adipisci quas, non recusandae tenetur eveniet quo illo totam nobis sunt 
+                        labore provident nesciunt asperiores, architecto itaque odit delectus sint?
+                    </p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
